# happ-store

./: Cargo.toml  README.md  flake.nix  happ.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
dnas/file_storage_provider/: dna.nix
dnas/file_storage_provider/workdir/: dna.yaml
dnas/main/: dna.nix
dnas/main/workdir/: dna.yaml
dnas/main/zomes/coordinator/happs/: Cargo.toml  zome.nix
dnas/main/zomes/coordinator/happs/src/: all_happs.rs  happ.rs  happ_release.rs  happ_unpublished.rs  happ_version.rs  lib.rs  publisher_happs.rs
dnas/main/zomes/coordinator/happs/tests/: all_happs.rs  happ.rs  happ_version.rs  publisher_happs.rs
dnas/main/zomes/integrity/happs/: Cargo.toml  zome.nix
dnas/main/zomes/integrity/happs/src/: happ.rs  lib.rs  (+3 more)
file_storage_provider/: default.nix
file_storage_provider/workdir/: happ.yaml
tests/: package.json
tests/src/: app-path.ts
tests/src/main/happs/: all-happs.test.ts  happ-version.test.ts  happ.test.ts  publisher-happs.test.ts  setup.ts
ui/: index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1738678260625-e2c00b92b6271.mjs
ui/src/: app-styles.ts  context.ts  holochain-app.ts  home-page.ts  overlay-page.ts  publisher-dashboard.ts  utils.ts
ui/src/main/happs/: happs-client.ts  happs-store.ts  mocks.ts  types.ts
ui/src/main/happs/elements/: all-happs.ts  create-happ-version.ts  create-happ.ts  edit-happ-version.ts  edit-happ.ts  happ-detail.ts  happ-summary.ts  happ-version-detail.ts  happ-version-summary.ts  happ-versions-for-happ.ts  publisher-happs.ts
workdir/: happ.yaml  web-happ.yaml
(+1 files in other folders)
