[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
holochain = { version = "0.3.4", default-features = false, features = [
  "test_utils",
] }
hdi = "0.4.4"
hdk = "0.3.4"
